Compiled (64-bit) with Qt 5.12.6, with libpcap, without POSIX capabilities, with
GLib 2.37.6, with zlib 1.2.11, with SMI 0.4.8, with c-ares 1.15.0, with Lua
5.2.4, with GnuTLS 3.4.17, with Gcrypt 1.8.5, with MIT Kerberos, with MaxMind DB
resolver, with nghttp2 1.39.2, with brotli, with LZ4, with Zstandard, with
Snappy, with libxml2 2.9.9, with QtMultimedia, with automatic updates using
Sparkle, with SpeexDSP (using system library), with SBC, with SpanDSP, with
bcg729.
Running on Mac OS X 10.15.4, build 19E287 (Darwin 19.4.0), with Intel(R)
Core(TM) i5-8279U CPU @ 2.40GHz (with SSE4.2), with 16384 MB of physical memory,
with locale C/UTF-8/C/C/C/C, with dark display mode, with HiDPI, with libpcap
version 1.9.1, with GnuTLS 3.4.17, with Gcrypt 1.8.5, with brotli 1.0.7, with
zlib 1.2.11, binary plugins supported (19 loaded).
Built using clang 4.2.1 Compatible Apple LLVM 11.0.0 (clang-1100.0.33.16).
Check the attached file, for "SYN" packet, the "relative sequence number" is same as "raw sequence number", and I think "relative sequence number" should be 0.
Yes, you're right the relative sequence number should normally be 0 for SYN.However I'm not able to reproduce your issue with 3.2.4 on macOS 10.15.5.Can you provide more details?* Does it happen for all TCP sessions?* Only for a specific session? If yes, can you share the pcap?* What TCP protocol preferences have you configured?
@Uli Heilmeier:Very sorry for late response!> * Does it happen for all TCP sessions? Yes> * What TCP protocol preferences have you configured? Please check attached file.Thanks very much in advance!
Issue reproducible with the provided TCP settings.
After enabling "Analyze TCP sequence number" relative sequence number is shown as 0.
Disabling "Analyze TCP sequence number" shows relative sequence number with raw value.