TCP: show relative numbers only when tcp_analyze_seq is enabled

Relative sequence numbers work only with tcp.analyze_sequence_numbers
is enabled. Therefore we should also show relative seq numbers only
when both options are enabled.

Expert info for TFO works also only when tcp_analyze_seq is enabled.

Bug: 16604
Change-Id: I0a535c3c8b07a7a7d2c42761df49b5e8ac5b7563
Reviewed-on: https://code.wireshark.org/review/37469
Petri-Dish: Anders Broman <a.broman58@gmail.com>
Tested-by: Petri Dish Buildbot
Reviewed-by: Anders Broman <a.broman58@gmail.com>